--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Disaster Response Platform</title>
+    <script
+      src="https://cdn.socket.io/4.7.2/socket.io.min.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
       body {
         font-family: sans-serif;
@@ -37,15 +41,33 @@
     <script type="module">
       import { v4 as uuidv4 } from "https://cdn.skypack.dev/uuid";
 
-      const output = document.getElementById("output");
-      const backend = "http://localhost:3000";
+      const backend = "http://localhost:3000"; // or use process.env.BASE_URL
 
-      const show = (res) => {
-        output.textContent = JSON.stringify(res, null, 2);
+      const show = (targetId, res) => {
+        document.getElementById(targetId).textContent = JSON.stringify(
+          res,
+          null,
+          2
+        );
+      };
+
+      const populateDisasterDropdowns = (disasters) => {
+        const selects = document.querySelectorAll(".disaster-dropdown");
+        selects.forEach((select) => {
+          select.innerHTML = "";
+          disasters.forEach((d) => {
+            const option = document.createElement("option");
+            option.value = d.id;
+            option.textContent = `${d.title} (${
+              d.location_name
+            }) - ${d.description?.slice(0, 50)}`;
+            select.appendChild(option);
+          });
+        });
       };
 
       document.addEventListener("DOMContentLoaded", () => {
-        // Auto-generate owner UUID on load
+        const socket = io(backend);
         const ownerInput = document.querySelector("input[name='owner_id']");
         ownerInput.value = uuidv4();
 
@@ -61,7 +83,7 @@
               .get("tags")
               .split(",")
               .map((t) => t.trim())
-              .filter((t) => t.length > 0),
+              .filter(Boolean),
             owner_id: form.get("owner_id"),
           };
           const res = await fetch(`${backend}/disasters`, {
@@ -69,7 +91,32 @@
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(body),
           });
-          show(await res.json());
+          show("create-disaster-output", await res.json());
+          loadDisasters();
+        };
+
+        // Update Disaster
+        document.getElementById("update-disaster").onsubmit = async (e) => {
+          e.preventDefault();
+          const form = new FormData(e.target);
+          const id = form.get("id");
+          const body = {
+            title: form.get("title"),
+            location_name: form.get("location_name"),
+            description: form.get("description"),
+            tags: form
+              .get("tags")
+              .split(",")
+              .map((t) => t.trim())
+              .filter(Boolean),
+          };
+          const res = await fetch(`${backend}/disasters/${id}`, {
+            method: "PUT",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(body),
+          });
+          show("update-disaster-output", await res.json());
+          loadDisasters();
         };
 
         // Submit Report
@@ -87,10 +134,10 @@
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(body),
           });
-          show(await res.json());
+          show("submit-report-output", await res.json());
         };
 
-        // Image Verification
+        // Verify Image
         document.getElementById("verify-image").onsubmit = async (e) => {
           e.preventDefault();
           const form = new FormData(e.target);
@@ -102,10 +149,10 @@
               body: JSON.stringify({ image_url: form.get("image_url") }),
             }
           );
-          show(await res.json());
+          show("verify-image-output", await res.json());
         };
 
-        // Geocode Location
+        // Geocode
         document.getElementById("geocode").onsubmit = async (e) => {
           e.preventDefault();
           const form = new FormData(e.target);
@@ -114,8 +161,74 @@
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ description: form.get("description") }),
           });
-          show(await res.json());
+          show("geocode-output", await res.json());
         };
+
+        // Nearby Resources
+        document.getElementById("nearby-resources").onsubmit = async (e) => {
+          e.preventDefault();
+          const form = new FormData(e.target);
+          const disaster_id = form.get("disaster_id");
+          const lat = form.get("lat");
+          const lon = form.get("lon");
+          const res = await fetch(
+            `${backend}/resources/${disaster_id}?lat=${lat}&lon=${lon}`
+          );
+          show("nearby-resources-output", await res.json());
+        };
+
+        // Social Media Fetch
+        document.getElementById("fetch-social-media").onsubmit = async (e) => {
+          e.preventDefault();
+          const form = new FormData(e.target);
+          const id = form.get("disaster_id");
+          const res = await fetch(`${backend}/disasters/${id}/social-media`);
+          show("fetch-social-media-output", await res.json());
+        };
+
+        // Official News
+        document.getElementById("fetch-news").onsubmit = async (e) => {
+          e.preventDefault();
+          const form = new FormData(e.target);
+          const id = form.get("disaster_id");
+          const res = await fetch(
+            `${backend}/disasters/${id}/official-updates`
+          );
+          show("fetch-news-output", await res.json());
+        };
+
+        // Load Disasters
+        window.loadDisasters = async () => {
+          const res = await fetch(`${backend}/disasters`);
+          const disasters = await res.json();
+          const list = document.getElementById("disaster-list");
+          list.innerHTML = "";
+          disasters.forEach((d) => {
+            const li = document.createElement("li");
+            li.textContent = `${d.id} | ${d.title} (${d.location_name})`;
+            list.appendChild(li);
+          });
+          populateDisasterDropdowns(disasters);
+        };
+        loadDisasters();
+
+        // Real-time
+        const realtimeBox = document.getElementById("realtime-output");
+        socket.on("disaster_updated", (data) => {
+          realtimeBox.textContent += `Disaster Updated: ${JSON.stringify(
+            data
+          )}\n`;
+        });
+        socket.on("social_media_updated", (data) => {
+          realtimeBox.textContent += `Social Media Update: ${JSON.stringify(
+            data
+          )}\n`;
+        });
+        socket.on("resources_updated", (data) => {
+          realtimeBox.textContent += `Resources Updated: ${JSON.stringify(
+            data
+          )}\n`;
+        });
       });
     </script>
   </head>
@@ -134,22 +247,37 @@
       </label>
       <button type="submit">Create Disaster</button>
     </form>
+    <pre id="create-disaster-output"></pre>
+
+    <h2>Update Disaster</h2>
+    <form id="update-disaster">
+      <select name="disaster_id" class="disaster-dropdown" required></select>
+      <input name="title" placeholder="Title" />
+      <input name="location_name" placeholder="Location Name" />
+      <textarea name="description" placeholder="Description"></textarea>
+      <input name="tags" placeholder="Tags (comma-separated)" />
+      <button type="submit">Update Disaster</button>
+    </form>
+    <pre id="update-disaster-output"></pre>
 
     <h2>Submit Report</h2>
     <form id="submit-report">
-      <input name="disaster_id" placeholder="Disaster ID" required />
+      <select name="disaster_id" class="disaster-dropdown" required></select>
       <input name="user_id" placeholder="User ID" required />
       <textarea name="content" placeholder="Report content" required></textarea>
       <input name="image_url" placeholder="Image URL (optional)" />
       <button type="submit">Submit Report</button>
     </form>
+    <pre id="submit-report-output"></pre>
 
     <h2>Verify Image</h2>
     <form id="verify-image">
-      <input name="disaster_id" placeholder="Disaster ID" required />
+      <select name="disaster_id" class="disaster-dropdown" required></select>
+
       <input name="image_url" placeholder="Image URL" required />
       <button type="submit">Verify</button>
     </form>
+    <pre id="verify-image-output"></pre>
 
     <h2>Extract & Geocode Location</h2>
     <form id="geocode">
@@ -160,8 +288,44 @@
       ></textarea>
       <button type="submit">Extract & Geocode</button>
     </form>
+    <pre id="geocode-output"></pre>
 
-    <h2>API Response</h2>
-    <pre id="output"></pre>
+    <h2>Nearby Resources</h2>
+    <form id="nearby-resources">
+      <select name="disaster_id" class="disaster-dropdown" required></select>
+
+      <input name="lat" placeholder="Latitude (e.g., 40.7128)" required />
+      <input name="lon" placeholder="Longitude (e.g., -74.0060)" required />
+      <button type="submit">Find Nearby Resources</button>
+    </form>
+    <pre id="nearby-resources-output"></pre>
+
+    <h2>Fetch Social Media Posts</h2>
+    <form id="fetch-social-media">
+      <select name="disaster_id" class="disaster-dropdown" required></select>
+
+      <input
+        name="location_name"
+        placeholder="Location Name (used as hashtag)"
+        required
+      />
+      <button type="submit">Fetch Posts</button>
+    </form>
+    <pre id="fetch-social-media-output"></pre>
+
+    <h2>Fetch Official News</h2>
+    <form id="fetch-news">
+      <select name="disaster_id" class="disaster-dropdown" required></select>
+
+      <button type="submit">Fetch News</button>
+    </form>
+    <pre id="fetch-news-output"></pre>
+
+    <h2>All Disasters</h2>
+    <button onclick="loadDisasters()">Refresh List</button>
+    <ul id="disaster-list"></ul>
+
+    <h2>Real-time Updates</h2>
+    <pre id="realtime-output"></pre>
   </body>
 </html>
