--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,8 @@
       }
     </style>
     <script type="module">
-      const backend = process.env.BASE_URL;
+      const backend =
+        "https://disaster-response-coordination-platform-kjuk.onrender.com";
       console.log("Backend:", typeof backend, backend);
 
       const show = (targetId, res) => {
